--- a/API/API/Web.config
+++ b/API/API/Web.config
@@ -9,8 +9,8 @@
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 	</configSections>
 	<connectionStrings>
-		<add name="Connection" connectionString="Data Source=.;Initial Catalog=Quanlycongviec;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;" />
-		<add name="DbEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Quanlycongviec;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="Connection" connectionString="Data Source=MITIS;Initial Catalog=QuanLyDuAn;User Id=devMitis;Password=m4vmehoangnb" />
+		<add name="DbEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=QuanLyDuAn;persist security info=True;user id=devMitis;password=m4vmehoangnb;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
